# gd-pattern-overlay-fix

./: .gitignore  CMakeLists.txt  CONCEPT.md  INSTALL.md  README.md  _build_mod_only.cmd  about.md  build.ps1  build_mod.bat  mod.json
src/: main.cpp
src/analysis/: AnalyzeSection.cpp  AnalyzeSection.hpp  MathUtil.hpp  RhythmMemory.cpp  RhythmMemory.hpp  Types.hpp
src/gdr/: BinaryReader.hpp  Parser.cpp  Parser.hpp  ReplayBounds.cpp  ReplayBounds.hpp  Timing.cpp  Timing.hpp  Types.hpp
src/hooks/: LoadReplay.cpp  LoadReplay.hpp  MenuLayer.cpp  PauseLayer.cpp  PlayLayer.cpp
src/store/: ReplayStore.cpp  ReplayStore.hpp  Settings.cpp  Settings.hpp
src/sync/: FrameClock.cpp  FrameClock.hpp
src/ui/: ModButtonChip.hpp  PatternOverlay.cpp  PatternOverlay.hpp  PatternPopup.cpp  PatternPopup.hpp  PatternService.cpp  PatternService.hpp
src/util/: LevelProgress.cpp  LevelProgress.hpp
